# quantum-pi-forge-fixed

./: # Code Citations.md  #3 Code Citations - Copy.txt  .env.example  .env.launch  .env.launch.example  .env.local  .env.local.example  .env.production  .env.production.sample  .env.production.template  .env.railway.example  .env.vercel.example  .eslintrc.json  .gitignore  .markdownlintrc.json  .npmrc  .vercelignore  00_READ_ME_FIRST.md  0G_ARISTOTLE_DEPLOY.md  0G_VERIFICATION_GUIDE.md  0G_VERIFICATION_READY.md  AGENT_QUICK_CARD.md  ANSWER_THESE_QUESTIONS.md  BASE_SEPOLIA_DEPLOY.md  CANON.md  CANONICAL_PLATFORM_DECLARATION.md  COMMIT_EDITMSG  COMPLETION_REPORT.md  CONFLICT_RESOLUTION_SUMMARY.md  CONSOLIDATION.md  CONSTELLATION_LAUNCH_STATUS.md  CONSTELLATION_MAP.md  CONTRACTS.md  CROSS_REPO_LINK_AUDIT_SUMMARY.md  CentralAwareness (3).sol  CentralAwareness (4).sol  DECENTRALIZATION_CASCADE_README.md  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  (+171 more)
.audit-logs/: broken-links.txt  missing-sections.txt  non-canonical-urls.txt
.github/: PULL_REQUEST_TEMPLATE.md  automated-agent-instructions.md  copilot-instructions.md  multi-agent-coordination-protocol.md  strict-system-prompt.md
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.vercel/: project.json
api/: .env.example  (+5 more)
pi-network/: .soroban-env.example  Cargo.toml  README.md  forge.rs  soroban-config.toml
(+655 files in other folders)
